# edgeai-alpha

./: .gitignore  AGENTS.md  DEPLOYMENT_STATUS.md  MIGRATION_PLAN.md  NODE_SETUP.md  README.md  VERCEL_REDEPLOY_GUIDE.md
.github/workflows/: deploy-backend.yml  docker-publish.yml
backend/: Cargo.toml  DEPLOYMENT.md  DEPLOY_TRIGGER.md  Dockerfile  README.md  docker-compose.yml  fly-node2.toml  fly.toml  railway.toml  render.yaml  running-a-node.md
backend/docs/: community-node-guide.md
backend/src/: main.rs
backend/src/api/: auth.rs  contracts.rs  data.rs  device.rs  dex.rs  governance.rs  mod.rs  rest.rs  staking.rs  wallet.rs
backend/src/blockchain/: block.rs  chain.rs  cold_blocks.rs  cold_storage.rs  mempool.rs  mempool_backup.rs  mod.rs  storage.rs  transaction.rs  tx_simulator.rs
backend/src/consensus/: data_quality.rs  device_registry.rs  governance.rs  mod.rs  poie.rs  staking.rs
backend/src/contracts/: mod.rs  smart_contract.rs  wasm_runtime.rs
backend/src/crypto/: mod.rs  wallet.rs
backend/src/data_market/: marketplace.rs  mod.rs
backend/src/iot/: generator.rs  types.rs
backend/src/network/: libp2p_network.rs  mod.rs  p2p.rs  p2p_design.md  peer_scoring.rs  sync_protocol.rs
backend/src/validators/: generator.rs  mod.rs  types.rs
backend/static/: index.html
bridge/backend/: .env.example  package-lock.json  package.json
docs/: docusaurus.config.ts  pnpm-lock.yaml  sidebars.ts
frontend/: .gitignore  PLAN.md  README.md  analyze_chain.ts  ideas.md  package.json  pnpm-lock.yaml  remove_bg.py  simulate_traffic.js  vercel.json
(+76 files in other folders)
